; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_spu_area_overlap.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_spu_area_overlap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, %struct.TYPE_6__*)* @spu_area_overlap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spu_area_overlap(%struct.TYPE_6__* byval(%struct.TYPE_6__) align 8 %0, %struct.TYPE_6__* byval(%struct.TYPE_6__) align 8 %1) #0 {
  %3 = alloca %struct.TYPE_6__, align 8
  %4 = alloca %struct.TYPE_6__, align 8
  call void @spu_area_scaled(%struct.TYPE_6__* sret %3, %struct.TYPE_6__* byval(%struct.TYPE_6__) align 8 %0)
  %5 = bitcast %struct.TYPE_6__* %0 to i8*
  %6 = bitcast %struct.TYPE_6__* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %5, i8* align 8 %6, i64 32, i1 false)
  call void @spu_area_scaled(%struct.TYPE_6__* sret %4, %struct.TYPE_6__* byval(%struct.TYPE_6__) align 8 %1)
  %7 = bitcast %struct.TYPE_6__* %1 to i8*
  %8 = bitcast %struct.TYPE_6__* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %7, i8* align 8 %8, i64 32, i1 false)
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %0, i32 0, i32 3
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 3
  %12 = load i64, i64* %11, align 8
  %13 = call i64 @__MAX(i64 %10, i64 %12)
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %0, i32 0, i32 3
  %15 = load i64, i64* %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %0, i32 0, i32 2
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %15, %17
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 3
  %20 = load i64, i64* %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 2
  %22 = load i64, i64* %21, align 8
  %23 = add nsw i64 %20, %22
  %24 = call i64 @__MIN(i64 %18, i64 %23)
  %25 = icmp slt i64 %13, %24
  br i1 %25, label %26, label %44

26:                                               ; preds = %2
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %0, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = call i64 @__MAX(i64 %28, i64 %30)
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %0, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %0, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = add nsw i64 %33, %35
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = add nsw i64 %38, %40
  %42 = call i64 @__MIN(i64 %36, i64 %41)
  %43 = icmp slt i64 %31, %42
  br label %44

44:                                               ; preds = %26, %2
  %45 = phi i1 [ false, %2 ], [ %43, %26 ]
  %46 = zext i1 %45 to i32
  ret i32 %46
}

declare dso_local void @spu_area_scaled(%struct.TYPE_6__* sret, %struct.TYPE_6__* byval(%struct.TYPE_6__) align 8) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i64 @__MAX(i64, i64) #1

declare dso_local i64 @__MIN(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
